Create static library, add port to kobject

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,14 +1,16 @@
 TESTS = $(wildcard *.c)
 CC = gcc
-CFLAGS = -Wall -Wextra -I../
+CFLAGS = -Wall -Wextra -I../build/include
+LDFLAGS = -L../build/lib -lkextrw
 FRAMEWORKS = -framework IOKit -framework CoreFoundation
+BUILD_DIR = ../build
 
 all:
-	mkdir -p bin
+	mkdir -p $(BUILD_DIR)/bin
 	@for test in $(TESTS); do \
-		$(CC) $(CFLAGS) $(FRAMEWORKS) $$test -o bin/$${test%.c}; \
-		ldid -Sentitlements.plist bin/$${test%.c}; \
+		$(CC) $(CFLAGS) $(LDFLAGS) $(FRAMEWORKS) $$test -o $(BUILD_DIR)/bin/$${test%.c}; \
+		ldid -Sentitlements.plist $(BUILD_DIR)/bin/$${test%.c}; \
 	done
 
 clean:
-	rm -rf bin
+	rm -rf $(BUILD_DIR)/bin
